--- a/visualize/dashboard.ipynb
+++ b/visualize/dashboard.ipynb
@@ -215,7 +215,7 @@
     "    layout.xaxis={\n",
     "    'type': 'date',\n",
     "    'tickformat': '%H:%M',\n",
-    "    'tickangle':'45',\n",
+    "    #'tickangle':'45',\n",
     "    }\n",
     "    layout.xaxis=dict(title= \"Hour of Day\",tickmode='linear')\n",
     "    layout.plot_bgcolor='rgb(11, 0, 0)'\n",
@@ -335,10 +335,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"map\", srcdoc=\"<!DOCTYPE html>\n",
+       "<html>\n",
+       "<head>\n",
+       "<title>mapboxgl-jupyter viz</title>\n",
+       "<meta charset='UTF-8' />\n",
+       "<meta name='viewport'\n",
+       "      content='initial-scale=1,maximum-scale=1,user-scalable=no' />\n",
+       "<script type='text/javascript'\n",
+       "        src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.42.2/mapbox-gl.js'></script>\n",
+       "<link type='text/css'\n",
+       "      href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.42.2/mapbox-gl.css' rel='stylesheet' />\n",
+       "<style type='text/css'>\n",
+       "    body { margin:0; padding:0; }\n",
+       "    .map { position:absolute; top:0; bottom:0; width:100%; }\n",
+       "    .legend {\n",
+       "        background-color: white;\n",
+       "        color: black;\n",
+       "        border-radius: 3px;\n",
+       "        bottom: 50px;\n",
+       "        width: 100px;\n",
+       "        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.10);\n",
+       "        font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;\n",
+       "        padding: 12px;\n",
+       "        position: absolute;\n",
+       "        right: 10px;\n",
+       "        z-index: 1;\n",
+       "    }\n",
+       "    .legend h4 { margin: 0 0 10px; }\n",
+       "    .legend-title {\n",
+       "        margin: 6px;\n",
+       "        padding: 6px;\n",
+       "        font-weight: bold !important;\n",
+       "        font-size: 14px;\n",
+       "        font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;\n",
+       "    }\n",
+       "    .legend div span {\n",
+       "        border-radius: 50%;\n",
+       "        display: inline-block;\n",
+       "        height: 10px;\n",
+       "        margin-right: 5px;\n",
+       "        width: 10px;\n",
+       "    }\n",
+       "</style>\n",
+       "\n",
+       "</head>\n",
+       "<body>\n",
+       "\n",
+       "<div id='map' class='map'></div>\n",
+       "<div id='legend' class='legend'></div>\n",
+       "\n",
+       "<script type='text/javascript'>\n",
+       "\n",
+       "function calcCircleColorLegend(myColorStops, title) {\n",
+       "    //Calculate a legend element on a Mapbox GL Style Spec property function stops array\n",
+       "    var mytitle = document.createElement('div');\n",
+       "    mytitle.textContent = title;\n",
+       "    mytitle.className = 'legend-title'\n",
+       "    var legend = document.getElementById('legend');\n",
+       "    legend.appendChild(mytitle);\n",
+       "\n",
+       "    for (p = 0; p < myColorStops.length; p++) {\n",
+       "        if (!!document.getElementById('legend-points-value-' + p)) {\n",
+       "            //update the legend if it already exists\n",
+       "            document.getElementById('legend-points-value-' + p).textContent = myColorStops[p][0];\n",
+       "            document.getElementById('legend-points-id-' + p).style.backgroundColor = myColorStops[p][1];\n",
+       "        } else {\n",
+       "            //create the legend if it doesn't yet exist\n",
+       "            var item = document.createElement('div');\n",
+       "            var key = document.createElement('span');\n",
+       "            key.className = 'legend-key';\n",
+       "            var value = document.createElement('span');\n",
+       "\n",
+       "            key.id = 'legend-points-id-' + p;\n",
+       "            key.style.backgroundColor = myColorStops[p][1];\n",
+       "            value.id = 'legend-points-value-' + p;\n",
+       "\n",
+       "            item.appendChild(key);\n",
+       "            item.appendChild(value);\n",
+       "            legend.appendChild(item);\n",
+       "            \n",
+       "            data = document.getElementById('legend-points-value-' + p)\n",
+       "            data.textContent = myColorStops[p][0];\n",
+       "        }\n",
+       "    }\n",
+       "}\n",
+       "\n",
+       "function generateInterpolateExpression(propertyValue, stops) {\n",
+       "    var expression;\n",
+       "    if (propertyValue == 'zoom') {\n",
+       "        expression = ['interpolate', ['exponential', 1.2], ['zoom']]\n",
+       "    }\n",
+       "    else if (propertyValue == 'heatmap-density') {\n",
+       "        expression = ['interpolate', ['linear'], ['heatmap-density']]\n",
+       "    }\n",
+       "    else {\n",
+       "        expression = ['interpolate', ['linear'], ['get', propertyValue]]\n",
+       "    }\n",
+       "\n",
+       "    for (var i=0; i<stops.length; i++) {\n",
+       "        expression.push(stops[i][0], stops[i][1])\n",
+       "    }\n",
+       "    return expression\n",
+       "}\n",
+       "\n",
+       "\n",
+       "function generateMatchExpression(propertyValue, stops, defaultValue) {\n",
+       "    var expression;\n",
+       "    expression = ['match', ['get', propertyValue]]\n",
+       "    for (var i=0; i<stops.length; i++) {\n",
+       "        expression.push(stops[i][0], stops[i][1])\n",
+       "    }\n",
+       "    expression.push(defaultValue)\n",
+       "    \n",
+       "    return expression\n",
+       "}\n",
+       "\n",
+       "\n",
+       "function generatePropertyExpression(expressionType, propertyValue, stops, defaultValue) {\n",
+       "    var expression;\n",
+       "    if (expressionType == 'match') {\n",
+       "        expression = generateMatchExpression(propertyValue, stops, defaultValue)\n",
+       "    }\n",
+       "    else {\n",
+       "        expression = generateInterpolateExpression(propertyValue, stops)\n",
+       "    }\n",
+       "\n",
+       "    return expression\n",
+       "}\n",
+       "\n",
+       "\n",
+       "</script>\n",
+       "\n",
+       "<!-- main map creation code, extended by mapboxgl/templates/heatmap.html -->\n",
+       "<script type='text/javascript'>\n",
+       "\n",
+       "\n",
+       "    mapboxgl.accessToken = 'pk.eyJ1IjoiaGFubmFocm9zczMzIiwiYSI6ImNqajR3aHcwYzFuNWcza3BnNzVoZzQzcHQifQ.eV_IJn3AdBE3n57rd2fhFA';\n",
+       "\n",
+       "    var map = new mapboxgl.Map({\n",
+       "        container: 'map',\n",
+       "        style: 'mapbox://styles/mapbox/light-v9?optimize=true',\n",
+       "        center: [-118, 34],\n",
+       "        zoom: 3,\n",
+       "        pitch: 0,\n",
+       "        bearing: 0,\n",
+       "        transformRequest: (url, resourceType) => {\n",
+       "                    if ( url.slice(0,22) == 'https://api.mapbox.com' || \n",
+       "                        url.slice(0,26) == 'https://a.tiles.mapbox.com' || \n",
+       "                        url.slice(0,26) == 'https://b.tiles.mapbox.com' ||\n",
+       "                        url.slice(0,26) == 'https://c.tiles.mapbox.com' ||\n",
+       "                        url.slice(0,26) == 'https://d.tiles.mapbox.com') {\n",
+       "                        //Add Mapboxgl-Jupyter Plugin identifier for Mapbox API traffic\n",
+       "                        return {\n",
+       "                           url: [url.slice(0, url.indexOf('?')+1), 'pluginName=PythonMapboxgl&', url.slice(url.indexOf('?')+1)].join('')\n",
+       "                         }\n",
+       "                     }\n",
+       "                     else {\n",
+       "                         //Do not transform URL for non Mapbox GET requests\n",
+       "                         return {url: url}\n",
+       "                     }\n",
+       "                }\n",
+       "    });\n",
+       "\n",
+       "    \n",
+       "\n",
+       "        map.addControl(new mapboxgl.NavigationControl());\n",
+       "\n",
+       "    \n",
+       "\n",
+       "    \n",
+       "\n",
+       "    document.getElementById('legend').style.visibility = 'hidden';\n",
+       "\n",
+       "\n",
+       "\n",
+       "    \n",
+       "\n",
+       "    map.on('style.load', function() {\n",
+       "\n",
+       "        map.addSource('data', {\n",
+       "            'type': 'geojson',\n",
+       "            'data': 'points.geojson', //data from dataframe output to geojson\n",
+       "            'buffer': 0,\n",
+       "            'maxzoom': 14\n",
+       "        });\n",
+       "\n",
+       "        map.addLayer({\n",
+       "            'id': 'circle',\n",
+       "            'source': 'data',\n",
+       "            'type': 'heatmap',\n",
+       "            'maxzoom': 24,\n",
+       "            'minzoom': 0,\n",
+       "            'paint': {\n",
+       "                \n",
+       "                    'heatmap-radius': generatePropertyExpression('interpolate', 'zoom', [[0, 1], [15, 40]]),\n",
+       "                \n",
+       "                \n",
+       "                \n",
+       "                \n",
+       "                    'heatmap-color' : generateInterpolateExpression('heatmap-density', [[1e-05, 'rgba(0,0,0,0)'], [0.01, 'rgb(254,235,226)'], [0.25, 'rgb(251,180,185)'], [0.5, 'rgb(247,104,161)'], [0.75, 'rgb(197,27,138)'], [1, 'rgb(122,1,119)']] ),\n",
+       "                \n",
+       "                'heatmap-opacity' : 0.9\n",
+       "            }\n",
+       "        }, '' );\n",
+       "\n",
+       "    });\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "</script>\n",
+       "\n",
+       "</body>\n",
+       "</html>\" style=\"width: 100%; height: 500px;\"></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "'''\n",
     "start_d = {'lat':[], 'lon':[]}\n",
     "end_d = {'lat':[], 'lon':[]}\n",
     "\n",
@@ -381,7 +608,8 @@
     "                 zoom = 3,\n",
     "                 )\n",
     "\n",
-    "viz.show()\n"
+    "viz.show()\n",
+    "'''\n"
    ]
   },
   {
